JSAI/error/src/test/resources/base/k003.js
// tests what print gets translated to
// this will depend on the value of TranslatorMutables.debugMode
print(4);
